# pipe-forward

./: .gitignore  README.md  pyproject.toml
src/pipe_forward/: __init__.py  _impl.py
tests/: test_pipe.py
